--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for CSS-Packer
 
+0.0401  2011-01-05
+    - Changed requirements to Regexp::RegGrp 0.04
+
 0.04    2010-12-03
     - Raised version number.
 
