--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for CSS-Packer
 
+1.000001    2011-02-27
+    - Changed requirements to Regexp::RegGrp 1.000001 due to "undefined submatches bug" in Regexp::RegGrp.
+    - Small change in declaration replacement sub.
+    - Added test.
+
 1.000   2011-01-17
     - Changed versioning.
     - Raised major version due to changes in versioning.
