dist updates having adopted this module
	- New maintainer: LEEJO
	- Repoint issue tracker/repo at leejo's fork
	- Add .travis.yml for CI goodness
	- Add Changes test
	- Add MYMETA.json to .gitignore

version 2.00 and Changes update for release to CPAN

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for CSS-Packer
 
+2.00        2015-06-04
+    - New maintainer: LEEJO
+    - Add .travis.yml for CI goodness
+    - Add Changes test
+    - Add MYMETA.json to .gitignore
+
 1.002001    2012-02-18
     - Use gnutar to build distribution.
 
