--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for CSS-Packer
 
+2.01        2016-06-22
+    - Fix refrence cycles in ->init method causing memory leaks (GH #1)
+
 2.00        2015-06-04
     - New maintainer: LEEJO
     - Add .travis.yml for CI goodness
