--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for CSS-Packer
 
-2.06       2018-11-06
+2.08       2020-03-02
+    - Fix Invalid content attr replacement (GH #10, thanks to rapsys)
+
+2.07       2018-11-06
     - Add missing files to MANIFEST
 
 2.06       2018-11-05
